# PathFindingPP

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_CN.md  README_EN.md  xmake.lua
cmake/: CompilerSettings.cmake  PathFindingConfig.cmake.in
gui/i18n/: pathfinding_zh.ts
gui/qml/: Main.qml
gui/src/: GridModel.cpp  GridModel.h  LanguageManager.cpp  LanguageManager.h  PathFinderController.h  main.cpp
include/pathfinding/: PathFinding.h
include/pathfinding/core/: DiagonalMovement.h  Export.hpp  Grid.h  Heuristic.hpp  Node.h  Util.h
include/pathfinding/finders/: AStarFinder.h  BestFirstFinder.h  BiAStarFinder.h  BiBestFirstFinder.h  BiBreadthFirstFinder.h  BiDijkstraFinder.h  BreadthFirstFinder.h  DijkstraFinder.h  Finder.h  IDAStarFinder.h  JumpPointFinder.h
src/core/: Grid.cpp  Node.cpp  Util.cpp
src/finders/: AStarFinder.cpp  BestFirstFinder.cpp  BiAStarFinder.cpp  BiBestFirstFinder.cpp  BiBreadthFirstFinder.cpp  BiDijkstraFinder.cpp  BreadthFirstFinder.cpp  DijkstraFinder.cpp  Finder.cpp  IDAStarFinder.cpp  JumpPointFinder.cpp
test/: test_main.cpp
visual/: resources.qrc
visual/i18n/: pathfinding_en.qm  pathfinding_en.ts  pathfinding_zh.qm  pathfinding_zh.ts
visual/qml/: Main.qml
visual/src/: GridModel.cpp  GridModel.h  LanguageManager.cpp  PathFinderController.cpp  PathFinderController.h  main.cpp
